<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/aladin"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="46sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/hindiSong_img"
                    style="@style/titleImage"
                    android:src="@drawable/hindi_songs"
                    app:civ_border_color="@color/colorRed"
                    app:civ_border_width="2dp" />

                <TextView
                    style="@style/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hindiSong_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    style="@style/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/englishSong_title" />

                <de.hdodenhof.circleimageview.CircleImageView
                    style="@style/titleImage"
                    android:src="@drawable/english_song"
                    app:civ_border_color="@color/colorRed"
                    app:civ_border_width="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    style="@style/titleImage"
                    android:src="@drawable/love_song"
                    app:civ_border_color="@color/colorRed"
                    app:civ_border_width="2dp" />

                <TextView
                    style="@style/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/loveSong_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    style="@style/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/partySong_title" />

                <de.hdodenhof.circleimageview.CircleImageView
                    style="@style/titleImage"
                    android:src="@drawable/party_song"
                    app:civ_border_color="@color/colorRed"
                    app:civ_border_width="2dp" />
            </LinearLayout>

            <Button
                android:id="@+id/showList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/play"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>